--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  font-family: 'Raleway', sans-serif;
+}
+
+.footer_bg {
+  background-color: #1F5EA8;
+}
