Busqueda de paquetes mediante el input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <app-menu></app-menu>
+<div class="col">
+  <!-- carga el componente segun la ruta a la que vayamos y este definida en el routing -->
+  <router-outlet></router-outlet>
 
+  <app-otras-tarjetas></app-otras-tarjetas>
+</div>
 
 <app-footer></app-footer>
