--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -7,7 +7,7 @@
       <!--Grid row-->
       <div class="row">
         <!--Grid column-->
-        <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+        <div class="col-lg-4 col-md-6 mb-4 mb-md-0 col-sm-12">
           <h5 class="text-uppercase text-white">REDES SOCIALES</h5>
           <div class="row justify-content-end">
             <div class="col-lg-1">
@@ -29,7 +29,7 @@
         <!--Grid column-->
 
         <!--Grid column-->
-        <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+        <div class="col-lg-4 col-md-6 mb-4 mb-md-0 col-sm-12">
           <h5 class="text-uppercase text-white">APLICACION MOVIL</h5>
 
           <div class="row justify-content-center">
@@ -46,7 +46,7 @@
         <!--Grid column-->
 
         <!--Grid column-->
-        <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+        <div class="col-lg-4 col-md-6 mb-4 mb-md-0 col-sm-12">
           <h5 class="text-uppercase text-white">HORARIOS DE ATENCION</h5>
 
           <div>
