--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,26 +1,29 @@
-<div class="row">
-  <div class="col-4 d-flex justify-content-start">
-    <img src="../../../assets/img/logo_servalia.png" class="mr-3" alt="Imagen" style="width: 100px; height: 30px;">
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-lg-4 d-flex justify-content-start col-md-4 col-sm-4">
+      <img src="../../../assets/img/logo_servalia.png" class="mr-3" alt="Imagen" style="width: 100px; height: 30px;">
+    </div>
+    <div class="col-lg-8 d-flex justify-content-end col-md-8 col-sm-8">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
+              <hr style="color: blue;">
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Paquetes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Nosotros</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </div>
-  <div class="col-8 d-flex justify-content-end">
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
-            <hr style="color: blue;">
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Paquetes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Nosotros</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </div>
+
 </div>
